unpackaged/main/default/objects/GC_OrderCSV__mdt/GC_OrderCSV__mdt.object-meta.xml
<CustomObject>
    <description>Contains the Custom Metadata used for columns printed when exported to CSV.</description>
    <label>OrderCSV</label>
    <pluralLabel>OrderCSVs</pluralLabel>
</CustomObject>