unpackaged/main/default/objects/GC_OrderCSV__mdt/fields/Hide_Community__c.field-meta.xml
<CustomField>
    <fullName>Hide_Community__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Community</label>
    <type>Checkbox</type>
</CustomField>