unpackaged/main/default/objects/GC_OrderCSV__mdt/fields/Is_Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>Is_Rich_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if this is a rich text area field, if so, strip the html tags from it.</description>
    <inlineHelpText>Determines if this is a rich text area field, if so, strip the html tags from it.</inlineHelpText>
    <label>Is Rich Text</label>
    <type>Checkbox</type>
</CustomField>