unpackaged/main/default/objects/GC_OrderCSV__mdt/fields/Order_No__c.field-meta.xml
<CustomField>
    <fullName>Order_No__c</fullName>
    <description>Determines the column order of the fields on the CSV</description>
    <inlineHelpText>Determines the column order of the fields on the CSV</inlineHelpText>
    <label>Order No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>